crates/djls-python/tests/snapshots/corpus__extraction_snapshots@repos__pretix__src__pretix__base__templatetags__daterange.py.snap
---
source: crates/djls-python/tests/corpus.rs
expression: snapshot(result)
input_file: crates/djls-corpus/.corpus/repos/pretix/src/pretix/base/templatetags/daterange.py
---
tag_rules: {}
filter_arities:
  "src.pretix.base.templatetags.daterange::filter::datetimerange":
    expects_arg: true
    arg_optional: false
block_specs: {}
